tests/expectations/parser/program/hex_eof.out
Error [EPAR0370005]: expected ';' -- found '}'
    --> test:3:23
     |
   3 | fn main() { let a = 0x}
     |                       ^
